--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,15 @@ LGS/Assembly-CSharp.csproj
 LGS/LGS.sln
 
 LGS/UserSettings/EditorUserSettings.asset
+
+LGS/Assets/Scripts/.vs/VSWorkspaceState.json
+
+LGS/Unity.VSCode.Editor.csproj
+
+LGS/Unity.VisualStudio.Editor.csproj
+
+LGS/.idea/.idea.LGS/riderModule.iml
+
+LGS/obj/Debug/Assembly-CSharp.Player.csprojAssemblyReference.cache
+
+LGS/Unity.Rider.Editor.csproj
