--- a/LGS/Cinemachine.csproj
+++ b/LGS/Cinemachine.csproj
@@ -52,77 +52,84 @@
     <ImplicitlyExpandDesignTimeFacades>false</ImplicitlyExpandDesignTimeFacades>
   </PropertyGroup>
   <ItemGroup>
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Behaviours\CinemachinePath.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\PostProcessing\CinemachineVolumeSettings.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Core\ICinemachineCamera.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Core\CinemachineDebug.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Core\UnityVectorExtensions.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Behaviours\CinemachineExternalCamera.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Behaviours\CinemachineFreeLook.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\EventHelpers\CinemachineTriggerAction.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Behaviours\CinemachineCameraOffset.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Behaviours\CinemachineCollider.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Core\CinemachinePathBase.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Behaviours\CinemachineDollyCart.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Core\CinemachineBlenderSettings.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Impulse\CinemachineImpulseManager.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\PostProcessing\CinemachinePostProcessing.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Components\CinemachineOrbitalTransposer.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Core\ICinemachineComponent.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Core\CinemachineComponentBase.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Behaviours\CinemachineBrain.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Core\LensSettings.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Behaviours\CinemachineConfiner.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Components\CinemachineSameAsFollowTarget.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Experimental\CinemachineNewVirtualCamera.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Behaviours\CinemachineVirtualCamera.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Behaviours\CinemachineClearShot.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Behaviours\CinemachinePipeline.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Components\CinemachineHardLookAt.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Timeline\CinemachineTrack.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Core\SignalSourceAsset.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Core\CinemachinePropertyAttribute.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Impulse\CinemachineImpulseSource.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Behaviours\CinemachineMixingCamera.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Impulse\CinemachineImpulseListener.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Core\CinemachineExtension.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Core\AxisState.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Core\CinemachineVirtualCameraBase.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Core\RuntimeUtility.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Behaviours\CinemachineSmoothPath.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Behaviours\CinemachinePixelPerfect.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\AssemblyInfo.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Impulse\CinemachineFixedSignal.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Components\CinemachineFramingTransposer.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Core\NoiseSettings.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Timeline\CinemachineMixer.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Components\CinemachineTransposer.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Core\Predictor.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Timeline\CinemachineShot.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Components\CinemachineTrackedDolly.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Components\CinemachineGroupComposer.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Experimental\CinemachineNewFreeLook.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Core\CinemachineTouchInputMapper.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Behaviours\CinemachineStoryboard.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Behaviours\CinemachineStateDrivenCamera.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Components\CinemachineHardLockToTarget.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Core\SplineHelpers.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Behaviours\CinemachineTargetGroup.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Impulse\CinemachineImpulseDefinition.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Impulse\CinemachineCollisionImpulseSource.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Core\UpdateTracker.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Components\CinemachinePOV.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Components\CinemachineBasicMultiChannelPerlin.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Core\CinemachineInputAxisDriver.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Core\GaussianFilter.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Timeline\CinemachineShotPlayable.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Components\CinemachineComposer.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Behaviours\CinemachineFollowZoom.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Behaviours\CinemachineBlendListCamera.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Core\CameraState.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Core\CinemachineCore.cs" />
-     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\Core\CinemachineBlend.cs" />
-     <None Include="Library\PackageCache\com.unity.cinemachine@2.5.0\Runtime\com.unity.cinemachine.asmdef" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Behaviours\CinemachinePath.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\PostProcessing\CinemachineVolumeSettings.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Core\ICinemachineCamera.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Core\CinemachineDebug.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Core\UnityVectorExtensions.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Behaviours\CinemachineExternalCamera.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Behaviours\CinemachineFreeLook.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Helpers\CinemachineTriggerAction.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Behaviours\CinemachineCameraOffset.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Behaviours\CinemachineCollider.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Core\CinemachinePathBase.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Behaviours\CinemachineDollyCart.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Core\CinemachineBlenderSettings.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Impulse\CinemachineImpulseManager.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\PostProcessing\CinemachinePostProcessing.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Components\CinemachineOrbitalTransposer.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Core\ICinemachineComponent.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Core\CinemachineComponentBase.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Behaviours\CinemachineBrain.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Core\LensSettings.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Behaviours\CinemachineConfiner.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Components\CinemachineSameAsFollowTarget.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Experimental\CinemachineNewVirtualCamera.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Behaviours\CinemachineVirtualCamera.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Behaviours\CinemachineClearShot.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Behaviours\CinemachinePipeline.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Components\CinemachineHardLookAt.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Helpers\CinemachineInputProvider.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Timeline\CinemachineTrack.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Components\Cinemachine3rdPersonFollow.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Core\SignalSourceAsset.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Core\CinemachinePropertyAttribute.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Impulse\CinemachineImpulseSource.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Behaviours\CinemachineMixingCamera.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Impulse\CinemachineImpulseListener.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Core\CinemachineExtension.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Core\AxisState.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Core\CinemachineVirtualCameraBase.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Core\RuntimeUtility.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Behaviours\CinemachineSmoothPath.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Behaviours\CinemachinePixelPerfect.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\AssemblyInfo.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Impulse\CinemachineFixedSignal.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Components\CinemachineFramingTransposer.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Core\NoiseSettings.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Timeline\CinemachineMixer.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Components\CinemachineTransposer.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Core\Predictor.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Timeline\CinemachineShot.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Core\TargetPositionCache.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Impulse\CinemachineIndependentImpulseListener.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Components\CinemachineTrackedDolly.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Components\CinemachineGroupComposer.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Experimental\CinemachineNewFreeLook.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Helpers\CinemachineTouchInputMapper.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Behaviours\CinemachineStoryboard.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Behaviours\Cinemachine3rdPersonAim.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Behaviours\CinemachineStateDrivenCamera.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Components\CinemachineHardLockToTarget.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Helpers\GroupWeightManipulator.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Core\SplineHelpers.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Behaviours\CinemachineTargetGroup.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Impulse\CinemachineImpulseDefinition.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Impulse\CinemachineCollisionImpulseSource.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Core\UpdateTracker.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Components\CinemachinePOV.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Behaviours\CinemachineRecomposer.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Components\CinemachineBasicMultiChannelPerlin.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Core\CinemachineInputAxisDriver.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Core\GaussianFilter.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Timeline\CinemachineShotPlayable.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Components\CinemachineComposer.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Behaviours\CinemachineFollowZoom.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Behaviours\CinemachineBlendListCamera.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Core\CameraState.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Core\CinemachineCore.cs" />
+     <Compile Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\Core\CinemachineBlend.cs" />
+     <None Include="Library\PackageCache\com.unity.cinemachine@2.6.3\Runtime\com.unity.cinemachine.asmdef" />
  <Reference Include="UnityEngine">
  <HintPath>D:/Unity/Unity Editors/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
  </Reference>
